--- a/check-stock.html
+++ b/check-stock.html
@@ -18,7 +18,7 @@
             <label for="size">Size:</label>
             <input type="text" id="size" name="size" required>
             
-            <button type="button">Check Stock</button>
+            <button type="button" id="checkStockButton">Check Stock</button>
         </form>
         <div id="stockResult"></div>
     </main>
