--- a/update-stock.html
+++ b/update-stock.html
@@ -21,7 +21,7 @@
             <label for="quantity">Quantity:</label>
             <input type="number" id="quantity" name="quantity" required>
             
-            <button type="button">Add</button>
+            <button type="button" id="addStockButton">Add</button>
         </form>
         <h2>Items to Update</h2>
         <ul id="updateList"></ul>
